--- a/app/src/main/res/layout/testchart.xml
+++ b/app/src/main/res/layout/testchart.xml
@@ -18,7 +18,7 @@
             android:visibility="gone" />
         <TextView
             android:id="@+id/view1"
-            android:layout_width="2dp"
+            android:layout_width="3dp"
             android:layout_height="200dp"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="20dp"
@@ -28,7 +28,7 @@
 
         <lecho.lib.hellocharts.view.LineChartView
             android:id="@+id/ChatView"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="200dp"
             android:layout_gravity="bottom" />
     </FrameLayout>
