--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
-        android:width="2dp"
-        android:color="@color/contents_text"/>
+        android:width="1dp"
+        android:color="@color/result_minor_text"/>
 <corners
     android:radius="10dp"/>
 </shape>
