--- a/app/src/main/res/layout/chart_marker_view.xml
+++ b/app/src/main/res/layout/chart_marker_view.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/txt_tips"
-        android:layout_width="40dp"
+        android:layout_width="60dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="10dp"
         android:background="@drawable/button"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
